WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77149
WebGL conformance test misc/functions-returning-strings.html fails
https://bugs.webkit.org/show_bug.cgi?id=77149
Summary
WebGL conformance test misc/functions-returning-strings.html fails
Kenneth Russell
Reported
2012-01-26 15:00:08 PST
WebKit returns null instead of an empty DOMString in a few situations.
Attachments
Patch
(10.91 KB, patch)
2012-01-31 08:33 PST
,
Ehsan Akhgari [:ehsan]
no flags
Details
Formatted Diff
Diff
Patch
(9.14 KB, patch)
2012-01-31 12:02 PST
,
Ehsan Akhgari [:ehsan]
no flags
Details
Formatted Diff
Diff
Patch
(9.22 KB, patch)
2012-01-31 19:18 PST
,
Ehsan Akhgari [:ehsan]
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ehsan Akhgari [:ehsan]
Comment 1
2012-01-31 05:31:12 PST
See this bug for more information:
http://www.khronos.org/bugzilla/show_bug.cgi?id=582
Ehsan Akhgari [:ehsan]
Comment 2
2012-01-31 08:33:42 PST
Created
attachment 124741
[details]
Patch
WebKit Review Bot
Comment 3
2012-01-31 08:36:32 PST
Attachment 124741
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 4
2012-01-31 09:34:01 PST
Comment on
attachment 124741
[details]
Patch
Attachment 124741
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/11386012
New failing tests: fast/canvas/webgl/functions-returning-strings.html
Ehsan Akhgari [:ehsan]
Comment 5
2012-01-31 11:20:12 PST
(In reply to
comment #4
)
> (From update of
attachment 124741
[details]
) >
Attachment 124741
[details]
did not pass chromium-ews (chromium-xvfb): > Output:
http://queues.webkit.org/results/11386012
> > New failing tests: > fast/canvas/webgl/functions-returning-strings.html
Can I get a test log link for the failing test?
Kenneth Russell
Comment 6
2012-01-31 11:34:31 PST
Comment on
attachment 124741
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=124741&action=review
Looks good overall; r- for a couple of relatively minor issues. Unfortunately I don't think it's possible to get the full test logs off the EWS bots; if you haven't already, build DumpRenderTree in your Chromium workspace and use src/webkit/tools/layout_tests/run_webkit_tests.sh to check the expected results. I'm doing this now and will update this bug if anything turns up.
> Source/WebCore/html/canvas/WebGLRenderingContext.cpp:5125 > + return WTF::emptyString();
4 space indent. (Style queue should have caught this.)
> Tools/ChangeLog:5 > +
https://bugs.webkit.org/show_bug.cgi?id=77149
Please split this change off into a second bug.
Ehsan Akhgari [:ehsan]
Comment 7
2012-01-31 11:49:40 PST
(In reply to
comment #6
)
> (From update of
attachment 124741
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=124741&action=review
> > Looks good overall; r- for a couple of relatively minor issues. Unfortunately I don't think it's possible to get the full test logs off the EWS bots; if you haven't already, build DumpRenderTree in your Chromium workspace and use src/webkit/tools/layout_tests/run_webkit_tests.sh to check the expected results. I'm doing this now and will update this bug if anything turns up.
I ran the tests locally with the default Mac bindings (whatever that's called, the one which runs WebCore under the Safari shell).
> > Source/WebCore/html/canvas/WebGLRenderingContext.cpp:5125 > > + return WTF::emptyString(); > > 4 space indent. (Style queue should have caught this.)
Will fix that (the style checking script didn't actually catch it).
> > Tools/ChangeLog:5 > > +
https://bugs.webkit.org/show_bug.cgi?id=77149
> > Please split this change off into a second bug.
Will do.
Ehsan Akhgari [:ehsan]
Comment 8
2012-01-31 12:01:38 PST
I split the second part of the patch to
bug 77462
.
Ehsan Akhgari [:ehsan]
Comment 9
2012-01-31 12:02:06 PST
Created
attachment 124791
[details]
Patch
WebKit Review Bot
Comment 10
2012-01-31 12:03:21 PST
Attachment 124791
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Auto-merging Source/WebCore/WebCore.exp.in Auto-merging Source/WebKit/mac/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit/mac/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Russell
Comment 11
2012-01-31 12:14:47 PST
Comment on
attachment 124791
[details]
Patch Looks good. Let's see what the Chromium EWS bot has to say before cq+'ing it. r=me
WebKit Review Bot
Comment 12
2012-01-31 12:55:56 PST
Comment on
attachment 124791
[details]
Patch
Attachment 124791
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/11387103
New failing tests: fast/canvas/webgl/functions-returning-strings.html
Kenneth Russell
Comment 13
2012-01-31 17:21:59 PST
Comment on
attachment 124791
[details]
Patch The problem is in the test of getSupportedExtensions()' return value; if the implementation had a different number of extensions then the output would be different. I've updated the Khronos version of the test; please update the copy of the test in this patch and its expectations.
Ehsan Akhgari [:ehsan]
Comment 14
2012-01-31 18:34:23 PST
Good catch! What is the Khronos rev id which fixes this?
Kenneth Russell
Comment 15
2012-01-31 18:41:28 PST
It's Khronos
r16797
.
Ehsan Akhgari [:ehsan]
Comment 16
2012-01-31 19:18:25 PST
Created
attachment 124869
[details]
Patch
Ehsan Akhgari [:ehsan]
Comment 17
2012-01-31 19:19:41 PST
Comment on
attachment 124869
[details]
Patch This new patch is based on Khronos
r16797
.
Kenneth Russell
Comment 18
2012-01-31 19:27:10 PST
Comment on
attachment 124869
[details]
Patch Looks good. r=me Let's wait for it to clear the EWS bots before cq+'ing it.
WebKit Review Bot
Comment 19
2012-02-06 16:38:57 PST
Comment on
attachment 124869
[details]
Patch Clearing flags on attachment: 124869 Committed
r106873
: <
http://trac.webkit.org/changeset/106873
>
WebKit Review Bot
Comment 20
2012-02-06 16:39:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug