WebGL conformance test misc/functions-returning-strings.html fails https://bugs.webkit.org/show_bug.cgi?id=77149

Source/WebCore:

Make sure that WebGL methods returning strings don't return null when
they run successfully.

Patch by Ehsan Akhgari <ehsan.akhgari@gmail.com> on 2012-02-06
Reviewed by Kenneth Russell.

Test: fast/canvas/webgl/functions-returning-strings.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::getProgramInfoLog):
(WebCore::WebGLRenderingContext::getShaderInfoLog):
(WebCore::WebGLRenderingContext::getShaderSource):
(WebCore::WebGLRenderingContext::ensureNotNull):
* html/canvas/WebGLRenderingContext.h:
(WebGLRenderingContext):

LayoutTests:

Imported the WebGL conformance test related to this.

Patch by Ehsan Akhgari <ehsan.akhgari@gmail.com> on 2012-02-06
Reviewed by Kenneth Russell.

* fast/canvas/webgl/functions-returning-strings-expected.txt: Added.
* fast/canvas/webgl/functions-returning-strings.html: Added.

Canonical link: https://commits.webkit.org/94791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106873 268f45cc-cd09-0410-ab3c-d52691b4dbfc